upgraded to Java 9, removed lombok