@@ -45,7 +45,7 @@ group = 'florianschmitt'
 version = '0.0.1-SNAPSHOT'
 jar.baseName = "connection"
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_9
 compileJava.options.encoding = 'UTF-8'
 
 tasks.withType(Test) {
@@ -64,6 +64,11 @@ tasks.withType(JacocoReport).all {
         html.enabled false
         xml.destination file("${buildDir}/reports/jacoco/report.xml")
     }
+}
+
+project.afterEvaluate {
+    def junitPlatformTestTask = project.tasks.getByName('junitPlatformTest')
+    junitPlatformTestTask.jvmArgs '--add-modules', 'java.xml.bind'
 }
 
 repositories {
@@ -105,26 +110,15 @@ dependencies {
 
     runtime('com.h2database:h2:+')
     compile('org.postgresql:postgresql:9.4.1212')
-    compileOnly('org.projectlombok:lombok:1.16.18')
 
     testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0")
-    //testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
     testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
 
-    testCompileOnly('org.projectlombok:lombok:1.16.18')
     testCompile "org.jetbrains.kotlin:kotlin-test"
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
-    //testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
     testCompile('org.apache.httpcomponents:httpclient:4.5.3')
     testCompile 'org.dbunit:dbunit:2.5.3'
     testCompile 'com.github.springtestdbunit:spring-test-dbunit:1.3.0'
-}
-
-test {
-    testLogging {
-        events "failed"
-        exceptionFormat "full"
-    }
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
